<resources>
    <string name="app_name">Decagon Android 007</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_description_media">Image of Pokemon</string>
    <string name="title">Bulbasaur</string>
    <string name="pokemonImage">Pokemon image</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="name">Pikachu</string>
    <string name="pokemon_stats">Stats</string>
    <string name="pokemon_moves">Moves</string>
    <string name="pokemon_ability">Abilities</string>
    <string name="text">TextView</string>
</resources>