<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/profileFragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PokemonProfileFragment">

    <ImageView
        android:id="@+id/pokemon_image"
        android:layout_gravity="center"
        android:scaleType="fitXY"
        android:layout_marginTop="@dimen/image_marginTop"
        android:src="@drawable/ic_baseline_insert_emoticon_24"
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        android:contentDescription="@string/pokemonImage" />


            <LinearLayout
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:padding="@dimen/card_layoutMargin"
                android:layout_marginTop="@dimen/layoutMarginTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/cardCornerRadius"
                    android:text="@string/name"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                    android:id="@+id/height_holder"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:text="@string/height"
                    android:layout_marginEnd="@dimen/textMarginEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/weight_holder"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:text="@string/weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                    android:id="@+id/height"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:text="@string/height"
                    android:textAlignment="center"
                    android:layout_marginBottom="@dimen/text_marginBottom"
                    android:layout_marginEnd="@dimen/textMarginEnd"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/weight"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:text="@string/weight"
                    android:textAlignment="center"
                    android:layout_marginBottom="@dimen/textMargin"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

                <TextView
                    android:id="@+id/ability"
                    android:text="@string/pokemon_ability"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:layout_marginBottom="@dimen/text_marginBottom"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_ability"
                    android:layout_width="wrap_content"
                    android:layout_marginBottom="@dimen/cardCornerRadius"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/list_items"
                    tools:itemCount="3">

                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:id="@+id/stat"
                    android:text="@string/pokemon_stats"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:layout_marginBottom="@dimen/text_marginBottom"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_stat"
                    android:layout_width="wrap_content"
                    android:layout_marginBottom="@dimen/cardCornerRadius"
                    tools:listitem="@layout/list_items"
                    tools:itemCount="3"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>
                <TextView
                    android:id="@+id/moves"
                    android:text="@string/pokemon_moves"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:layout_marginBottom="@dimen/text_marginBottom"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_moves"
                    android:layout_width="wrap_content"
                    android:layout_marginBottom="@dimen/cardCornerRadius"
                    tools:listitem="@layout/list_items"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>







</LinearLayout>